--- a/src/main/java/mini/ui/BanHangJPanel.form
+++ b/src/main/java/mini/ui/BanHangJPanel.form
@@ -307,7 +307,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Kh&#x1ea5;u tr&#x1ef1; h&#x1ea1;ng:"/>
+        <Property name="text" type="java.lang.String" value="Kh&#x1ea5;u tr&#x1eeb; h&#x1ea1;ng:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
